--- a/css/unige.css
+++ b/css/unige.css
@@ -507,5 +507,10 @@ prm-alma-other-members prm-service-button [aria-label="Ordinare fotocopie"] {
 }
 
 .unige-db-categories ul {
+    font-weight: normal;
     width: 90%;
+}
+
+.unige-db-categories li.selected {
+    font-weight: bold;
 }
